# HyDES

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
IDL/: MAIN.pro  advance_fg_2d.pro  drawing.pro  drawing_2d.pro  exact_solution.pro  fluxes.pro  initrout_2d.pro  nonspec_c.pro  ray_tracing.pro
Python/: calc.py  display.py  domain.py  initCond.py  main.py  makemovie.py  state.py
Python/parameter_files/: params.json
hydes/: hydes.py  makemovie.py  state.py
source/: IDL_spanish_intructions.txt  MAIN.pro  boundc_2d.pro  deriv2d.pro  drawing_2d.pro  grid_c.pro  hydes.py  initCond.py  init_c.pro  main.py  midval.pro  primitives.pro  rain.pro  ray_tracing.pro  tstep.pro
source/parameter_files/: params.json
src/: animacion.py  animation.py  calc.py  display.py  domain.py  hydes.py  initCond.py  main.py  params.json  state.py
src/parameter_files/: params.json
src/plots/: animacion.py
tests/: test.py
