[metadata]
name = hydes
version = 0.0.2
author = Andres Vicente Arevalo
author_email = andres.vicente.arevalo@gmail.com
description = Hydrodinamical equation solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreuva/HyDES
project_urls =
    Bug Tracker = https://github.com/andreuva/HyDES/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
